fix alignment (temp deactivating fit-content) fixes #305

--- a/data/resources/sass/components/_tei.scss
+++ b/data/resources/sass/components/_tei.scss
@@ -74,7 +74,8 @@ text-decoration-line: underline;
 
 .tei_hi_borderBloc {
     border: 2px dotted gray;
-    width: fit-content;
+    /*width: fit-content;
+    margin: 0 auto;*/
 }
 
 /* Used in wikipedia transformations */
